--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
 
     implementation 'com.ankushgrover:Hourglass:2.0.0'
 
+    implementation 'com.github.jrvansuita:PickImage:2.2.4'
 
 }
