--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="vn.edu.csc.babyapp">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -7,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
 
     <application
         android:name="controller.App"
@@ -51,12 +53,13 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="vn.edu.csc.babyapp.fileprovider"
+            android:authorities="${applicationId}.com.vansuita.pickimage.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_provider" />
+                android:resource="@xml/picker_provider_paths" />
         </provider>
     </application>
 
